--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Serialization\IMessageDescriptor.cs" />
     <Compile Include="Serialization\MessageDescriptor.cs" />
     <Compile Include="Serialization\MessageDescriptorFactory.cs" />
+    <Compile Include="Serialization\TagData.cs" />
     <Compile Include="Serialization\WireFormat.cs" />
     <Compile Include="Serialization\WireType.cs" />
     <Compile Include="Mapping\TypeExtensions.cs" />
