--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Serialization\CodedInputStream.cs" />
     <Compile Include="Serialization\CodedOutputStream.cs" />
     <Compile Include="Serialization\CommonBinaryOperations.cs" />
+    <Compile Include="Serialization\FieldDescriptor.cs" />
     <Compile Include="Serialization\IMessageDescriptor.cs" />
     <Compile Include="Serialization\MessageDescriptor.cs" />
     <Compile Include="Serialization\MessageDescriptorFactory.cs" />
