--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Serialization\CommonBinaryOperations.cs" />
     <Compile Include="Serialization\FieldDescriptor.cs" />
     <Compile Include="Serialization\IMessageDescriptor.cs" />
+    <Compile Include="Serialization\Strategies\DateTimeSerialization.cs" />
     <Compile Include="Serialization\Strategies\IntSerialization.cs" />
     <Compile Include="Serialization\ISerializationStrategy.cs" />
     <Compile Include="Serialization\MessageDescriptor.cs" />
