continuing to rename and move things around to handle repeated elements

--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -49,16 +49,15 @@
     <Compile Include="Mapping\ProtoMappingException.cs" />
     <Compile Include="Mapping\ReflectionHelper.cs" />
     <Compile Include="Internal\StringVisitor.cs" />
-    <Compile Include="Serialization\CodedInputStream.cs" />
-    <Compile Include="Serialization\CodedOutputStream.cs" />
+    <Compile Include="Serialization\Streams\CodedInputStream.cs" />
+    <Compile Include="Serialization\Streams\CodedOutputStream.cs" />
     <Compile Include="Serialization\CommonBinaryOperations.cs" />
     <Compile Include="Serialization\FieldDescriptor.cs" />
     <Compile Include="Serialization\IMessageSerializer.cs" />
-    <Compile Include="Serialization\RepeatedFieldDescriptor.cs" />
     <Compile Include="Serialization\Strategies\BooleanStrategy.cs" />
     <Compile Include="Serialization\Strategies\IntSerialization.cs" />
     <Compile Include="Serialization\ISerializationStrategy.cs" />
-    <Compile Include="Serialization\MessageDescriptor.cs" />
+    <Compile Include="Serialization\MessageSerializer.cs" />
     <Compile Include="Serialization\MessageDescriptorFactory.cs" />
     <Compile Include="Serialization\Strategies\ListStrategy.cs" />
     <Compile Include="Serialization\Strategies\MessageSerialization.cs" />
