--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Internal\StringVisitor.cs" />
     <Compile Include="Serialization\Streams\CodedInputStream.cs" />
     <Compile Include="Serialization\Streams\CodedOutputStream.cs" />
-    <Compile Include="Serialization\CommonBinaryOperations.cs" />
+    <Compile Include="Serialization\Streams\CommonBinaryOperations.cs" />
     <Compile Include="Serialization\FieldDescriptor.cs" />
     <Compile Include="Serialization\IMessageSerializer.cs" />
     <Compile Include="Serialization\Strategies\BooleanStrategy.cs" />
