enforcing some consistancy in naming

--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -55,14 +55,14 @@
     <Compile Include="Serialization\FieldDescriptor.cs" />
     <Compile Include="Serialization\IMessageSerializer.cs" />
     <Compile Include="Serialization\Strategies\BooleanStrategy.cs" />
-    <Compile Include="Serialization\Strategies\IntSerialization.cs" />
+    <Compile Include="Serialization\Strategies\IntStrategy.cs" />
     <Compile Include="Serialization\ISerializationStrategy.cs" />
     <Compile Include="Serialization\MessageSerializer.cs" />
-    <Compile Include="Serialization\MessageDescriptorFactory.cs" />
+    <Compile Include="Serialization\MessageSerializerFactory.cs" />
     <Compile Include="Serialization\Strategies\ListStrategy.cs" />
-    <Compile Include="Serialization\Strategies\MessageSerialization.cs" />
-    <Compile Include="Serialization\Strategies\NullableIntSerialization.cs" />
-    <Compile Include="Serialization\Strategies\StringSerialization.cs" />
+    <Compile Include="Serialization\Strategies\MessageStrategy.cs" />
+    <Compile Include="Serialization\Strategies\NullableIntStrategy.cs" />
+    <Compile Include="Serialization\Strategies\StringStrategy.cs" />
     <Compile Include="Serialization\TagData.cs" />
     <Compile Include="Serialization\WireFormat.cs" />
     <Compile Include="Serialization\WireType.cs" />
