--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -39,11 +39,13 @@
   <ItemGroup>
     <Compile Include="ClrMessages\GuidMessage.cs" />
     <Compile Include="CommunicationModel.cs" />
+    <Compile Include="Mapping\FieldDescriptor.cs" />
     <Compile Include="Mapping\FieldMap.cs" />
     <Compile Include="Mapping\FieldRules.cs" />
     <Compile Include="Internal\IMap.cs" />
     <Compile Include="Internal\IMappingPart.cs" />
     <Compile Include="Internal\IMappingVisitor.cs" />
+    <Compile Include="Mapping\MessageDescriptor.cs" />
     <Compile Include="Mapping\MessageMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mapping\ProtoMappingException.cs" />
