--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -40,14 +40,14 @@
     <Compile Include="ClrMessages\GuidMessage.cs" />
     <Compile Include="CommunicationModel.cs" />
     <Compile Include="Mapping\FieldDescriptor.cs" />
-    <Compile Include="Mapping\FieldMap.cs" />
+    <Compile Include="FieldMap.cs" />
     <Compile Include="Mapping\FieldRules.cs" />
     <Compile Include="Internal\IMap.cs" />
     <Compile Include="Internal\IMappingPart.cs" />
     <Compile Include="Internal\IMappingVisitor.cs" />
     <Compile Include="Mapping\IMessageDescriptor.cs" />
     <Compile Include="Mapping\MessageDescriptor.cs" />
-    <Compile Include="Mapping\MessageMap.cs" />
+    <Compile Include="MessageMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mapping\ProtoMappingException.cs" />
     <Compile Include="Mapping\ReflectionHelper.cs" />
