finally getting the feel for how to handle the tree structure

--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -54,13 +54,18 @@
     <Compile Include="Mapping\ReflectionHelper.cs" />
     <Compile Include="Internal\StringVisitor.cs" />
     <Compile Include="Serialization\FieldDescriptors.cs" />
+    <Compile Include="Serialization\Strategies\ByteStrategy.cs" />
+    <Compile Include="Serialization\Strategies\ByteArrayStrategy.cs" />
+    <Compile Include="Serialization\Strategies\SignedInt64Strategy.cs" />
+    <Compile Include="Serialization\Strategies\UnsignedInt64Strategy.cs" />
+    <Compile Include="Serialization\Strategies\UnsignedInt32Strategy.cs" />
     <Compile Include="Serialization\Streams\CodedInputStream.cs" />
     <Compile Include="Serialization\Streams\CodedOutputStream.cs" />
     <Compile Include="Serialization\Streams\CommonBinaryOperations.cs" />
     <Compile Include="Serialization\FieldSerializer.cs" />
     <Compile Include="Serialization\IMessageSerializer.cs" />
     <Compile Include="Serialization\Strategies\BooleanSerialization.cs" />
-    <Compile Include="Serialization\Strategies\IntStrategy.cs" />
+    <Compile Include="Serialization\Strategies\SignedInt32Strategy.cs" />
     <Compile Include="Serialization\ISerializationStrategy.cs" />
     <Compile Include="Serialization\MessageSerializer.cs" />
     <Compile Include="Serialization\MessageSerializerFactory.cs" />
