--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Serialization\FieldDescriptors.cs" />
     <Compile Include="Serialization\Strategies\ByteStrategy.cs" />
     <Compile Include="Serialization\Strategies\ByteArrayStrategy.cs" />
+    <Compile Include="Serialization\Strategies\SingleStrategy.cs" />
+    <Compile Include="Serialization\Strategies\DoubleStrategy.cs" />
+    <Compile Include="Serialization\Strategies\NullableSignedInt64Strategy.cs" />
     <Compile Include="Serialization\Strategies\SignedInt64Strategy.cs" />
     <Compile Include="Serialization\Strategies\UnsignedInt64Strategy.cs" />
     <Compile Include="Serialization\Strategies\UnsignedInt32Strategy.cs" />
@@ -71,7 +74,7 @@
     <Compile Include="Serialization\MessageSerializerFactory.cs" />
     <Compile Include="Serialization\Strategies\ListStrategy.cs" />
     <Compile Include="Serialization\Strategies\MessageStrategy.cs" />
-    <Compile Include="Serialization\Strategies\NullableIntStrategy.cs" />
+    <Compile Include="Serialization\Strategies\NullableSignedInt32Strategy.cs" />
     <Compile Include="Serialization\Strategies\StringStrategy.cs" />
     <Compile Include="Serialization\TagData.cs" />
     <Compile Include="Serialization\WireFormat.cs" />
