--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Calendar\Holidays\ChristmasDayCheck.cs" />
     <Compile Include="Calendar\Holidays\ChristmasDayObserved.cs" />
     <Compile Include="Calendar\Holidays\ColumbusDayObserved.cs" />
+    <Compile Include="Calendar\Holidays\IndependenceDayCheck.cs" />
+    <Compile Include="Calendar\Holidays\IndependenceDayObservedCheck.cs" />
     <Compile Include="Calendar\Holidays\EasterCheck.cs" />
     <Compile Include="Calendar\Holidays\FlagDayCheck.cs" />
     <Compile Include="Calendar\Holidays\FlagDayObservedCheck.cs" />
