working on FastCollection

--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Range_Specs.cs" />
     <Compile Include="Reflection\CodeBuilder_Specs.cs" />
     <Compile Include="Reflection\Customer.cs" />
+    <Compile Include="Reflection\FastCollection_Specs.cs" />
     <Compile Include="Reflection\HandleRefType_Specs.cs" />
     <Compile Include="Reflection\InterOp_Specs.cs" />
     <Compile Include="Reflection\Performance_Specs.cs" />
