--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Serialization\ISerializationWriter.cs" />
     <Compile Include="Serialization\SerializationUtil.cs" />
     <Compile Include="DateTimeExtensions\TimeSpanExtensions.cs" />
+    <Compile Include="Threading\AsyncExecutor.cs" />
+    <Compile Include="Threading\AsyncResult.cs" />
+    <Compile Include="Threading\IAsyncExecutor.cs" />
     <Compile Include="Threading\ILockedObject.cs" />
     <Compile Include="Threading\ReaderWriterLockContext.cs" />
     <Compile Include="Threading\ReaderWriterLockedObject.cs" />
