From blog post on nice way to defer an action in a unit test

--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Reflection_Specs.cs" />
     <Compile Include="Repository\Repository_Specs.cs" />
     <Compile Include="SpecificationBase.cs" />
+    <Compile Include="Threading\DeferFor_Specs.cs" />
     <Compile Include="Threading\ErlangInfluencedStyle_Specs.cs" />
     <Compile Include="Threading\LamdbaIsTheNewDisposable_Specs.cs" />
     <Compile Include="Threading\UpgradeableLock_Specs.cs" />
