--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -95,6 +95,7 @@
     <Compile Include="SpecificationBase.cs" />
     <Compile Include="StateMachine\ExampleWorkflow.cs" />
     <Compile Include="StateMachine\ExampleStateMachine.cs" />
+    <Compile Include="StateMachine\StateSerialization_Specs.cs" />
     <Compile Include="StateMachine\State_Specs.cs" />
     <Compile Include="Threading\DeferFor_Specs.cs" />
     <Compile Include="Threading\ErlangInfluencedStyle_Specs.cs" />
