--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Reflection\FastCollection.cs" />
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="StateMachine\Activity.cs" />
+    <Compile Include="StateMachine\BasicEvent.cs" />
+    <Compile Include="StateMachine\DataEvent.cs" />
     <Compile Include="StateMachine\Event.cs" />
     <Compile Include="StateMachine\State.cs" />
     <Compile Include="StateMachine\StateEventAction.cs" />
