--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -73,6 +73,10 @@
     <Compile Include="Mapper.cs" />
     <Compile Include="Metrics\Counter.cs" />
     <Compile Include="Metrics\Timer.cs" />
+    <Compile Include="Monads\Continuations.cs" />
+    <Compile Include="Monads\Identity.cs" />
+    <Compile Include="Monads\List.cs" />
+    <Compile Include="Monads\Maybe.cs" />
     <Compile Include="Reflection\FastCollection.cs" />
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="StateMachine\Activity.cs" />
