--- a/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
+++ b/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
@@ -77,6 +77,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Repository\NHibernateRepository.cs" />
     <Compile Include="Repository\NHibernateRepositoryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
