--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -63,10 +63,12 @@
     <Compile Include="Cryptography\EncryptionResult.cs" />
     <Compile Include="Cryptography\ICryptographyService.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService.cs" />
+    <Compile Include="Data\ITransaction.cs" />
+    <Compile Include="Data\UnitOfWork.cs" />
     <Compile Include="DateTimeExtensions\DateTimeExtensions.cs" />
     <Compile Include="CollectionExtensions\DictionaryExtensions.cs" />
     <Compile Include="ILocalContext.cs" />
-    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Data\IUnitOfWork.cs" />
     <Compile Include="LocalContext.cs" />
     <Compile Include="LockFreeQueue.cs" />
     <Compile Include="Mail\FileMailServer.cs" />
@@ -89,21 +91,21 @@
     <Compile Include="StateMachine\State.cs" />
     <Compile Include="StateMachine\StateEventAction.cs" />
     <Compile Include="StateMachine\StateMachine.cs" />
-    <Compile Include="Repository\IAggregateRoot.cs" />
-    <Compile Include="Repository\IRepositoryFactory.cs" />
+    <Compile Include="Data\IAggregateRoot.cs" />
+    <Compile Include="Data\IRepositoryFactory.cs" />
     <Compile Include="LinkedComparer.cs" />
     <Compile Include="ObjectExtensions\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RangeBuilder.cs" />
     <Compile Include="RangeEnumerator.cs" />
-    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Data\IRepository.cs" />
     <Compile Include="Reflection\FastProperty.cs" />
     <Compile Include="Reflection\IReflectedObjectContext.cs" />
     <Compile Include="Reflection\ReflectedPropertyContext.cs" />
     <Compile Include="Reflection\ReflectionCache.cs" />
-    <Compile Include="Repository\RepositoryBase.cs" />
-    <Compile Include="Repository\RepositoryCache.cs" />
+    <Compile Include="Data\RepositoryBase.cs" />
+    <Compile Include="Data\InMemoryRepository.cs" />
     <Compile Include="ReverseComparer.cs" />
     <Compile Include="FunctionTimer.cs" />
     <Compile Include="Serialization\BinarySerializationReader.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="Threading\ReaderWriterLockedObject.cs" />
     <Compile Include="Threading\UpgradeableLock.cs" />
     <Compile Include="Tuple.cs" />
+    <Compile Include="TypedKey.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
