--- a/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
+++ b/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0BEBC5E0-BDC4-421C-971B-2C5BE3204F7C}</ProjectGuid>
+    <ProjectGuid>{00A9A599-4850-46D5-AC94-4D10717A4EB2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Common.Specs</RootNamespace>
-    <AssemblyName>Magnum.Common.Specs</AssemblyName>
+    <RootNamespace>Magnum.Infrastructure.Specs</RootNamespace>
+    <AssemblyName>Magnum.Infrastructure.Specs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\tests</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\tests\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -39,10 +39,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Machine.Specifications, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\MSpec\Machine.Specifications.dll</HintPath>
-    </Reference>
     <Reference Include="MbUnit, Version=3.0.5.546, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MbUnit\MbUnit.dll</HintPath>
@@ -51,7 +47,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MbUnit\MbUnit35.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks, Version=3.3.0.906, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+    <Reference Include="NHibernate, Version=2.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\NHibernate\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.Linq, Version=1.0.0.0, Culture=neutral, PublicKeyToken=444cf6a87fdab271, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\NHibernate\NHibernate.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.5.0.2, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
@@ -59,66 +63,31 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache_Specs.cs" />
-    <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
-    <Compile Include="CrazySerializationIdea.cs" />
-    <Compile Include="Cryptography\PublicKeyCrypto.cs" />
-    <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
-    <Compile Include="DateTimeExtension_Specs.cs" />
-    <Compile Include="DictionaryExtension_Specs.cs" />
-    <Compile Include="TypedKey_Specs.cs" />
-    <Compile Include="Mapping_Specs.cs" />
-    <Compile Include="Metric_Specs.cs" />
-    <Compile Include="ObjectExtension_Specs.cs" />
+    <Compile Include="Data\NHibernateTransaction_Specs.cs" />
+    <Compile Include="Data\NHibernateUnitOfWork_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range_Specs.cs" />
-    <Compile Include="Reflection\CodeBuilder_Specs.cs" />
-    <Compile Include="Reflection\Customer.cs" />
-    <Compile Include="Reflection\FastCollection_Specs.cs" />
-    <Compile Include="Reflection\HandleRefType_Specs.cs" />
-    <Compile Include="Reflection\InterOp_Specs.cs" />
-    <Compile Include="Reflection\Performance_Specs.cs" />
-    <Compile Include="Reflection\PropertyType_Specs.cs" />
-    <Compile Include="Reflection\Visibility_Specs.cs" />
-    <Compile Include="SerializationSpecificationBase.cs" />
-    <Compile Include="Reflection_Specs.cs" />
-    <Compile Include="Repository\Repository_Specs.cs" />
-    <Compile Include="SpecificationBase.cs" />
-    <Compile Include="StateMachine\AccountManagementWorkflow.cs" />
-    <Compile Include="StateMachine\ExampleWorkflow.cs" />
-    <Compile Include="StateMachine\ExampleStateMachine.cs" />
-    <Compile Include="StateMachine\StateSerialization_Specs.cs" />
-    <Compile Include="StateMachine\State_Specs.cs" />
-    <Compile Include="Threading\Continuation_Specs.cs" />
-    <Compile Include="Threading\DeferFor_Specs.cs" />
-    <Compile Include="Threading\ErlangInfluencedStyle_Specs.cs" />
-    <Compile Include="Threading\LamdbaIsTheNewDisposable_Specs.cs" />
-    <Compile Include="Threading\UpgradeableLock_Specs.cs" />
-    <Compile Include="Threading\WrappedObjectLocking_Specs.cs" />
+    <Compile Include="StateMachine\StateMachineStorage_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Magnum.Common.Specs\Magnum.Common.Specs.csproj">
+      <Project>{0BEBC5E0-BDC4-421C-971B-2C5BE3204F7C}</Project>
+      <Name>Magnum.Common.Specs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Magnum.Infrastructure\Magnum.Infrastructure.csproj">
+      <Project>{A3CA2BD8-BA6C-457F-9C56-0809C2739710}</Project>
+      <Name>Magnum.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="alice.pfx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bob.pfx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <EmbeddedResource Include="StateMachine\ExampleStateMachine.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
