Changed the state machine define syntax a bit to make some things more explicit and to allow a visualizer to be built to show conditions and state transitions based on events.

--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
     <Compile Include="DateTimeExtension_Specs.cs" />
     <Compile Include="DictionaryExtension_Specs.cs" />
+    <Compile Include="StateMachine\FileImportWorkflow.cs" />
     <Compile Include="TypedKey_Specs.cs" />
     <Compile Include="Mapping_Specs.cs" />
     <Compile Include="Metric_Specs.cs" />
